# cine-holliu

./: .env.example  .envrc  .envrc.example  .gitignore  AGENTS.md  CHATS.md  EASTEREGG.md  Justfile  PROMPT.md  PROTOCOL.md  README.md  go.mod  go.sum  main.go  mkdocs.yml  pyproject.toml
.dev/: lint.py  md2html.py
.github/workflows/: deploy-cloudflare.yml  deploy.yml
docs/: chats.md  deployment.md  index.md  llm-parameters.md
